# aimplant

./: .gitignore  Dockerfile  README.md  download_model.py  entrypoint.sh  environment.macos.yml  environment.yml  local_train.py  pyproject.toml  requirements.txt  requirements_docker.txt  requrements.txt
aimplant_demonstrator/: analyze_neighbourhoods.py  analyze_neighbourhoods_ooc.py  analyze_positive_distances_ooc.py  build_date_stopwords.py  calculate_to_vector_database.py  calculate_vectors.py  combined_date_stopwords.txt  combined_stop_words.txt  count_similar_words.py  count_tokenized_words.py  count_words.py  count_words2.py  create_vector_database.py  find_implants_in_word_freq.py  glossary.txt  glossary_summary.txt  glossary_summary_092.txt  implants_in_word_freq.txt  interactive_query.py  make_aggregated_vector_db.py  query_neighbourhoods.py  query_neighbourhoods_positive_only.py  simple_word_count.py  stop_words.txt  streamlit_interactive_query.py  test_mlm_performance.py  vector_search.py  word_freq.txt  word_freq_summary.txt  word_freq_summary_092.txt
apps/xlmroberta_mlm/config/: config_fed_client.json  config_fed_server.json
apps/xlmroberta_mlm/custom/: config.py  epoch_persistor.py  nlp_models.py
apps/xlmroberta_mlm/resources/: cco-dsv.json
federatedhealth_mlm_job/: meta.json
federatedhealth_mlm_job/app/config/: config_fed_client.json  config_fed_server.json  train_config.json
fedhealth_mlm_data/: austen_manual_stop_list.txt  positive-words-dev.txt  positive-words-train.txt  positive-words.txt  site-1_dev.txt  site-1_test.txt  site-1_train.txt  site-2_dev.txt  site-2_test.txt
nlp-mlm/configs/: cco-dsv.json
nlp-mlm/custom/: config.py
nlp-mlm/custom/configs/: training.py
nlp-mlm/custom/learners/: nlp_learner.py
nlp-mlm/custom/models/: nlp_models.py
nlp-mlm/jobs/xlmroberta_mlm/app/config/: config_fed_client.json  config_fed_server.json
nlp-ner/custom/learners/: nlp_learner.py
nlp-ner/custom/models/: nlp_models.py
nlp-ner/jobs/xlmroberta_mlm/app/config/: config_fed_client.json  config_fed_server.json
src/federatedhealth/: config.py  default_config.json  nlp_learner.py  nlp_models.py  tqdm_logger.py
test-mlm/: README.md
