[project]
name = "federatedhealth"
version = "0.1.0"
description = "Code for the Federated Health project"
authors = [
  { name="Erik Ylipää", email="erik.ylipaa@gmail.com" }
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
  "torch",
  "nvflare==2.4",
  "transformers",
  "datasets",
  "evaluation",
  "peft",
  "sqlitedict>=2.1.0",
  "h5py>=3.15.1",

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"federatedhealth" = ["default_config.yaml"]