[project]
name = "federatedhealth"
version = "0.1.0"
description = "Code for the Federated Health project"
authors = [
  { name="Erik Ylipää", email="erik.ylipaa@gmail.com" }
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.12"

dependencies = [
  "torch",
  "torch>=2.9.1",
  "torchvision>=0.24.1",
  "grpcio>=1.53.3",
  "pytorch-triton-rocm>=3.5.1 ; sys_platform == 'linux'",
  "nvflare",
  "transformers",
  "datasets",
  "evaluation",
  "peft",
  #"tensorboard"
  "pip>=25.3",
  "tensorboard>=2.20.0",
  "gpustat>=1.1.1",
  "pymilvus>=2.6.6",
  "sqlitedict>=2.1.0",
  "h5py>=3.15.1",
  "lancedb>=0.27.0",
  "line-profiler>=5.0.0",
  "scikit-learn>=1.8.0",
  "matplotlib>=3.10.8",
]

[[tool.uv.index]]
name = "pytorch-rocm"
url = "https://download.pytorch.org/whl/rocm6.4"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-rocm", marker = "sys_platform == 'linux'" },
]
torchvision = [
  { index = "pytorch-rocm", marker = "sys_platform == 'linux'" },
]
# ROCm6 support relies on `pytorch-triton-rocm`, which should also be installed from the PyTorch index
# (and included in `project.dependencies`).
pytorch-triton-rocm = [
  { index = "pytorch-rocm", marker = "sys_platform == 'linux'" },
]




[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"federatedhealth" = ["default_config.yaml"]

